
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int HUF_DTable ;
typedef int BYTE ;


 size_t ERROR (int ) ;
 size_t HUF_decompress4X2_usingDTable_internal (void*,size_t,int const*,size_t,int *,int) ;
 scalar_t__ HUF_isError (size_t) ;
 size_t HUF_readDTableX2_wksp (int *,void const*,size_t,void*,size_t) ;
 int srcSize_wrong ;

__attribute__((used)) static size_t HUF_decompress4X2_DCtx_wksp_bmi2(HUF_DTable* dctx, void* dst, size_t dstSize,
                                   const void* cSrc, size_t cSrcSize,
                                   void* workSpace, size_t wkspSize, int bmi2)
{
    const BYTE* ip = (const BYTE*) cSrc;

    size_t hSize = HUF_readDTableX2_wksp(dctx, cSrc, cSrcSize,
                                         workSpace, wkspSize);
    if (HUF_isError(hSize)) return hSize;
    if (hSize >= cSrcSize) return ERROR(srcSize_wrong);
    ip += hSize; cSrcSize -= hSize;

    return HUF_decompress4X2_usingDTable_internal(dst, dstSize, ip, cSrcSize, dctx, bmi2);
}
